# fast-api-lms

./: main.py  pyproject.toml
